<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.altinn.apps.fisher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".InformationActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/bottom_margin_min" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/TITLE_FORM_SUBHEAD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_info_about_app"
                    app:typeface="roboto_medium" />

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/FORM_LABEL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_normal"
                    android:text="@string/lbl_info_about_app_deatils"
                    app:typeface="roboto_medium" />

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/TITLE_FORM_SUBHEAD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_normal"
                    android:text="@string/lbl_info_about_report"
                    app:typeface="roboto_medium" />

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/FORM_LABEL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_normal"
                    android:text="@string/lbl_info_about_report_details"
                    app:typeface="roboto_medium" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/statusMessageContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>