<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.altinn.apps.fisher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ReportReceivedFishActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_marginTop="@dimen/top_margin_min" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/FORM_LABEL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_normal"
                    android:text="@string/lbl_reports_for"
                    app:typeface="roboto_medium" />

                <com.altinn.apps.fisher.ui.component.REditText
                    android:id="@+id/edtUnit"
                    style="@style/FORM_EDIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:editable="false"
                    android:inputType="text"
                    android:padding="4dp"
                    android:layout_marginTop="@dimen/top_margin_min"
                    android:text=""
                    app:typeface="roboto_medium" />

                <com.altinn.apps.fisher.ui.component.RTextView
                    style="@style/FORM_LABEL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_normal"
                    android:text="@string/lbl_choose_rception"
                    app:typeface="roboto_medium" />

                <Spinner
                    android:id="@+id/selectFirmName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_margin_min"
                    android:layout_marginTop="@dimen/top_margin_min"
                    android:background="@drawable/spinner_bg"
                    android:spinnerMode="dropdown"
                    android:textSize="@dimen/fs_m5" />

                <LinearLayout
                    android:id="@+id/layout_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <View
                        style="@style/SEPERATOR"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <com.altinn.apps.fisher.ui.component.RTextView
                        style="@style/FORM_LABEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_regs_aircraft"
                        app:typeface="roboto_medium" />

                    <com.altinn.apps.fisher.ui.component.RAutoCompleteTextView
                        android:id="@+id/edtFirmNumber"
                        style="@style/FORM_EDIT_INDICATOR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text=""
                        android:layout_marginTop="@dimen/top_margin_min"
                        app:typeface="roboto_medium" />

                    <com.altinn.apps.fisher.ui.component.RTextView
                        style="@style/FORM_LABEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_normal"
                        android:text="@string/lbl_ship_name"
                        app:typeface="roboto_medium" />

                    <com.altinn.apps.fisher.ui.component.RAutoCompleteTextView
                        android:id="@+id/edtVesselName"
                        style="@style/FORM_EDIT_INDICATOR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_min"
                        android:inputType="text"
                        android:text=""
                        app:typeface="roboto_medium" />

                    <com.altinn.apps.fisher.ui.component.RTextView
                        style="@style/FORM_LABEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_normal"
                        android:text="@string/lbl_fish_type"
                        app:typeface="roboto_medium" />

                    <Spinner
                        android:id="@+id/fish_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/bottom_margin_min"
                        android:layout_marginTop="@dimen/top_margin_min"
                        android:background="@drawable/spinner_bg"
                        android:spinnerMode="dropdown"
                        android:textSize="@dimen/fs_m4" />

                    <com.altinn.apps.fisher.ui.component.RTextView
                        style="@style/FORM_LABEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_normal"
                        android:text="@string/lbl_date"
                        app:typeface="roboto_medium" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_min" >

                        <com.altinn.apps.fisher.ui.component.REditText
                            android:id="@+id/edtDateInput"
                            style="@style/FORM_EDIT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/datePicker"
                            android:background="@color/color_white"
                            android:inputType="text"
                            android:padding="4dp"
                            android:text=""                           
                            app:typeface="roboto_medium" />

                        <ImageButton
                            android:id="@+id/datePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/collections_go_to_today" />
                    </RelativeLayout>

                    <com.altinn.apps.fisher.ui.component.RTextView
                        style="@style/FORM_LABEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_normal"
                        android:text="@string/lbl_time"
                        app:typeface="roboto_medium" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_min" >

                        <com.altinn.apps.fisher.ui.component.REditText
                            android:id="@+id/edtTimeInput"
                            style="@style/FORM_EDIT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/timePicker"
                            android:background="@color/color_white"
                            android:inputType="text"
                            android:padding="4dp"
                            android:text=""
                            app:typeface="roboto_medium" />

                        <ImageButton
                            android:id="@+id/timePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/device_access_time" />
                    </RelativeLayout>

                    <View
                        style="@style/SEPERATOR"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/bottom_margin_min"
                        android:layout_marginTop="@dimen/top_margin_min"
                        android:orientation="horizontal"
                        android:weightSum="100" >

                        <RelativeLayout
                            android:id="@+id/btnSave"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/right_margin_normal"
                            android:layout_weight="50"
                            android:background="@color/color_dark_gray" >

                            <com.altinn.apps.fisher.ui.component.RTextView
                                android:id="@+id/title_head"
                                style="@style/TITLE_FORM_HEAD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/content_save"
                                android:gravity="center_vertical"
                                android:text="@string/lbl_save"
                                app:typeface="roboto_medium" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/btnSend"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/left_margin_normal"
                            android:layout_weight="50"
                            android:background="@color/color_dark_gray" >

                            <com.altinn.apps.fisher.ui.component.RTextView
                                android:id="@+id/title_head"
                                style="@style/TITLE_FORM_HEAD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/social_send_now"
                                android:gravity="center_vertical"
                                android:text="@string/lbl_send"
                                app:typeface="roboto_medium" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/statusMessageContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>